# getgpuname

./: Cargo.toml  README.md  build.rs
examples/: get-gpu-name-from-id.rs  get-gpu-name.rs
src/: lib.rs  pci_ids.rs
