[package]
name = "getgpuname"
description = "Gets the GPU name from the PCI-IDS database using either the provided parameters or the ones in /sys/class/drm/"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repistory = "https://github.com/quixaq/getgpuname"
readme = "README.md"
keywords = ["gpu", "system-info", "linux", "pci", "hardware"]
categories = ["hardware-support"]

[dependencies]
phf = "0.13.1"

[build-dependencies]
pci-ids = "0.2.6"
phf_codegen = "0.13.1"
