[package]
name = "getgpuname"
description = "Gets the GPU name from the PCI-IDS database using either the provided parameters or the ones in /sys/class/drm/"
version = "0.1.5"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/quixaq/getgpuname"
readme = "README.md"
keywords = ["gpu", "system-info", "linux", "pci", "hardware"]
categories = ["hardware-support"]

[dependencies]
phf = "0.13.1"

[build-dependencies]
pci-ids = "0.2.6"
phf_codegen = "0.13.1"
